<resources>
  <string name="app_name">PasswordAndroid</string>
  <string name="title_setup">Setup</string>
  <string name="title_archive">Archive</string>
  <string name="title_game">Game</string>

  <string name="setup_text">Setup</string>
  <string name="length_of_password_text">Length of password</string>
  <string name="characters_allowed_text">Characters Allowed</string>
  <string name="repeat_letters_text">Would you like to allow repeated letters</string>
  <string name="create_button_text">Create</string>

  <string name="game_prompt"> Code length: %$1d. Possible characters: %$2s. Duplicated characters %$3s allowed.</string>
  <string name="guess_prompt">What is your guess #%$1d?</string>
  <string name="guess_length_error">The guess must be exactly %$d characters in length.</string>
  <string name="guess_result">%$1d correct and in position. %$2d correct but out of position.</string>
  <string name="surrender_prompt">Surrender? [y/N]</string>
  <string name="positive_plural_condition">are</string>
  <string name="negative_plural_condition">are not</string>
  <string name="affirmative_character">y</string>
  <string name="surrender_result">Game surrendered. The secret code was %$1s.</string>
  <string name="solved_result">%$1s is correct. You broke the code!</string>

  <string name="baseUrl">https://java-bootcamp.cnm.edu/rest/codebreaker/</string>

</resources>
