<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="layout.SetupFragment">

  <!-- TODO: Update blank fragment layout -->
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/setup_text"/>
  
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/length_of_password_text"/>

  <Spinner
    android:id="@+id/length_spinner"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/characters_allowed_text"/>

  <EditText
    android:id="@+id/character_field"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>


  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/repeat_letters_text"/>

  <CheckBox
    android:id="@+id/repeat_spinner"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

  <Button
    android:id="@+id/create_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/create_button_text"/>



</LinearLayout>
